# AI_VOICE_ASSISTANT

./: .gitignore  CMakeLists.txt  README.md  package.json  sdkconfig
main/: CMakeLists.txt  audio_handler.c  audio_handler.h  main.c  udp_client.c  udp_client.h  wifi_handler.c  wifi_handler.h
nodejs_bridge/: package-lock.json  package.json  realtime_bridge.js
